0.0.31
Added local search path to styles so now also looks in ~/.gnome2/gedit/styles.
Added "Theme" to prefs.

0.0.30
fixed bug in determining mime type of file.
Fixed debian install instructions in INSTALL file.

0.0.29
Fixed infinite loop bug when no find text in find/replace dialog.
Fixed find/replace buttons not being labelled/dimmed correctly.
Fixed not showing replace in all files confirmation when not using regex.

0.0.28
Fixed minor bug in configure.ac script.
Replaced simple font name and size entry box in prefs with font select button.
Fixed Minor bug when using 'Go To Definition' from menu opens a new file jumping to wrong line number.
Minor updates to user submitted scripts.
If glib networking is installed if selecting "Open Man page" or "Search in GTK-Docs" can't find anything appropriate a google search is performed.

0.0.27
Fixed over enthusiastic utf8 conversion!
Example tools now use releative paths.
External tools can now use releative paths to command script.
Fixed bug with external tools.

0.0.26
Fixed .desktop file.
Fixed minor bug in example tools for case conversion ( thanks sadi! ).
Greyed out 'Back' button in find/replace when using regex as can't ( yet! ) do a backward regex search.
Made Regex search optional and remembered.
Replace unprintable characters in file with "". ( allows opening some files with binary data like .csv ).
Scan and convert encoding to UTF8 now MUCH better.
Fixed infinite loop bug in regex search when no match found.

0.0.25
fixed multibyte character find/replace bug.
Search 'wrap' and 'replace all' settings saved on exit.
Search in all files setting saved on exit.
Added Search in all files.

0.0.24
Search/Replace now uses regex.
Insensitive search now remembered on exit.

0.0.23
Fixed bug when GtkSu not installed.
Set document 'dirty' after spellcheck.

0.0.22
Added check for installed manpageeditor, if succeeds menu item added in file menu.
Code clean.
Undo bug fix.
Added Manpage Editor Icon for menuitem.